css/style.css
/* GENERAL */
* {
	box-sizing: border-box;
}
html {
	height: 100%;
}
body {
	line-height: 1.15;
	background: #FFF;
	font-family: 'Open Sans', sans-serif;
	height: 100%;
	margin: 0;
	padding: 0;
}
body {
	overflow-x: hidden;
	overflow-y: scroll;
	scrollbar-color: #7f7f7f white; /* thumb and track color */
	scrollbar-width: thin;
	-ms-overflow-style: none;	/* IE 10+ */
}
body.desktop {
	overflow-x: hidden;
	overflow-y: hidden;
}
body.desktop.darkMode {
    background-color: #423d3c;
}
body.mobile {
	overflow-x: auto;
	overflow-y: scroll;
}
.desktop .mobile-only,.mobile .desktop-only {
	display: none;
}
body.desktop::-webkit-scrollbar {		/* WebKit */
	width: 0;
	height: 0;
}
.span_1_of_2 {
	width: 50%;
}
.col {
	display: block;
	float: left;
}
.button {
	margin-right: 5px;
	border: none;
	color: white;
	padding: 5px 15px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 16px;
	cursor: pointer;
	outline: none;
}
.button:last-child {
	margin-right: 0;
}
.button:hover {
	opacity: 0.90;
}
.button:active {
	opacity: 0.70;
}
.button:disabled {
	opacity: 0.60;
	cursor: unset;
}
button.green {
	background-color: #109600;
}
button.blue {
	background-color: #1F9BDB;
}
button.red {
	background-color: #CC212C;
}
button.orange {
	background-color: #FF6421;
}
button.purple {
	background-color: #9B32A8;
}
button.white {
    background-color: #ffffff;
    color: black;
}
button.grey {
    background-color: #423d3c;
}
/* General input */
input {
	border: 1px solid #FFF;
	color: #FFF;
	background-color: #000;
	padding: 5px 10px;
	width: 100px;
	outline: none;
}
/* Numeric input */
input[type=number] {
  -webkit-appearance: textfield;
     -moz-appearance: textfield;
          appearance: textfield;
}
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
	-webkit-appearance: none;
}
input[type=number] {
	-moz-appearance: textfield;
}
/* Slider input: Hide default */
input[type=range] {
	-webkit-appearance: none;	/* Hides the slider so that custom slider can be made */
	width: 110px;				/* Specific width is required for Firefox. */
	height: 30px;
	background: transparent;	/* Otherwise white in Chrome */
	border: 0;
	margin: 0;
	padding: 5px 0;
}
input[type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
}
input[type=range]:focus {
	outline: none;
}
input[type=range]::-ms-track {
	width: 100%;
	cursor: pointer;
	background: transparent; 
	border-color: transparent;
	color: transparent;
}
/* Slider input: Style thumb */
input[type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
	border: 1px solid #000000;
	height: 22px;
	width: 12px;
	border-radius: 3px;
	background: #FFF;
	cursor: pointer;
	margin-top: -8px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
}
input[type=range]::-moz-range-thumb {
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	border: 1px solid #000000;
	height: 22px;
	width: 12px;
	border-radius: 3px;
	background: #FFF;
	cursor: pointer;
}
input[type=range]::-ms-thumb {
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	border: 1px solid #000000;
	height: 22px;
	width: 12px;
	border-radius: 3px;
	background: #FFF;
	cursor: pointer;
}
/* Slider input: Style track */
input[type=range]::-webkit-slider-runnable-track {
	width: 100%;
	height: 8.4px;
	cursor: pointer;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	background: #222;
	border-radius: 1.3px;
	border: 1px solid #FFF;
}
input[type=range]::-moz-range-track {
	width: 100%;
	height: 8.4px;
	cursor: pointer;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	background: #222;
	border-radius: 1.3px;
	border: 1px solid #FFF;
}
input[type=range]::-ms-track {
	width: 100%;
	height: 8.4px;
	cursor: pointer;
	background: transparent;
	border-color: transparent;
	border-width: 16px 0;
	color: transparent;
}
input[type=range]::-ms-fill-lower {
	background: #2a6495;
	border: 0.2px solid #222;
	border-radius: 2.6px;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}
input[type=range]::-ms-fill-upper {
	background: #3071a9;
	border: 1px solid #FFF;
	border-radius: 2.6px;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

/* WRAPPER */
#wrapper {
	display: flex;
	max-width: 100%;
}

.desktop #wrapper {
	max-height: 100%;
	flex-direction: row;
}

.mobile #wrapper {
	flex-direction: column;
}

/* MAP */
#mapscreen {
	height: 100%;
	position: relative;
}
#mapscreen * {
	line-height: 1.15;
}
#mapscreen #bg {
	max-height: 100%;
	width: auto;
	display: block;
}
#map {
	position: relative;
}
.icons {
	background-image: url(../img/spritesheet.png);
	background-repeat: no-repeat;
	display: block;
}
.icons-map {
	/* 32x32 */
	width: 64px;
	height: 64px;
	margin-top: -32px;
	margin-left: -32px;
	transform: scale(0.5);
	position: absolute;
}
.icons-map.flash {
	-webkit-filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
	filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}
.icons-map.clickable {
	cursor: pointer;
}
.icons-mute {
	transform: scale(0.375);
	position: absolute;
	pointer-events: none;
	background-position: -67px -133px;
}
.icons-bunker {
	background-position: -1px -1px;
}
.icons-cash {
	background-position: -67px -1px;
}
.icons-coke {
	background-position: -133px -1px;
}
.icons-fees {
	background-position: -1px -67px;
}
.icons-forgery {
	background-position: -67px -67px;
}
.icons-importExport {
	background-position: -133px -67px;
}
.icons-meth {
	background-position: -1px -133px;
}
.icons-nightclub {
	width: 60px;
	height: 60px;
	background-position: -133px -133px;
}
.icons-weed {
	background-position: -199px -1px;
}
.icons-wheel {
	background-position: -199px -67px;
}
/* ... */

